--- a/modules/chaos-odds/package.json
+++ b/modules/chaos-odds/package.json
@@ -5,7 +5,7 @@
 	"main": "index.ts",
 	"types": "index.ts",
 	"scripts": {
-		"build": "cd cli && ./build.sh",
+		"build": "./build.sh",
 		"build:ios": "cd cli && ./_build.ios.sh",
 		"build:android": "cd cli && ./_build.android.sh",
 		"clean": "cd rust && cargo clean",
