--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"prebuild:ios": "npm run prebuild -- -p ios",
 		"eas:android": "npm run version:increment && npm run prebuild:android && eas build -p android",
 		"eas:apk": "npm run eas:android -- --profile apk",
+		"build:modules": "./modules/build.sh",
 		"build": "npm run build:android && npm run build:ios",
 		"build:apk": "npm run eas:apk -- --local",
 		"build:android": "npm run eas:android -- --local",
