--- a/modules/chaos-odds/rust/Cargo.toml
+++ b/modules/chaos-odds/rust/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-rayon = "1.10"
+num-integer = "0.1"
 
 [lib]
 crate-type = [
+    "rlib",      # for tests / normal Rust linking
     "staticlib", # for iOS
     "cdylib"    # for Android
 ]
