--- a/modules/chaos-odds/rust/Cargo.toml
+++ b/modules/chaos-odds/rust/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-num-integer = "0.1"
+lazy_static = "1.4"
+smallvec = "1.11"
+rustc-hash = "1.1"
 
 [lib]
 crate-type = [
