--- a/modules/chaos-odds/package.json
+++ b/modules/chaos-odds/package.json
@@ -10,7 +10,13 @@
 		"build:android": "cd cli && ./_build.android.sh",
 		"clean": "cd rust && cargo clean",
 		"test": "cd rust && cargo test",
-		"test:release": "cd rust && cargo test --release"
+		"test:release": "cd rust && cargo test --release",
+		"test:js": "jest",
+		"test:js:watch": "jest --watch",
+		"test:js:coverage": "jest --coverage",
+		"test:ios": "jest --testEnvironment=node --testNamePattern='ChaosOddsJSI' --verbose",
+		"test:android": "jest --testEnvironment=node --testNamePattern='ChaosOddsJSI' --verbose",
+		"test:all": "npm run test && npm run test:js"
 	},
 	"keywords": [
 		"react-native",
@@ -30,6 +36,10 @@
 	},
 	"devDependencies": {
 		"@types/react": "*",
-		"@types/react-native": "*"
+		"@types/react-native": "*",
+		"@types/jest": "^29.5.0",
+		"jest": "^29.5.0",
+		"react-native": "*",
+		"ts-jest": "^29.1.0"
 	}
 }
