--- a/slices/modules/tsconfig.json
+++ b/slices/modules/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"extends": "../../tsconfig.base.json",
 	"compilerOptions": {
-		"baseUrl": "../..",
+		"baseUrl": "../../",
 		"paths": {
 			"@assets/*": ["assets/*"],
 			"@shared/*": ["slices/shared/*"],
