--- a/slices/shared/tsconfig.json
+++ b/slices/shared/tsconfig.json
@@ -1,10 +1,11 @@
 {
 	"extends": "../../tsconfig.base.json",
 	"compilerOptions": {
+		"baseUrl": "../../",
 		"paths": {
-			"@assets/*": ["../../assets/*"],
-			"@modules/*": ["../modules/*"],
-			"@shared/model": ["./model"]
+			"@assets/*": ["assets/*"],
+			"@modules/*": ["slices/modules/*"],
+			"@shared/model": ["slices/shared/model"]
 		}
 	}
 }
