--- a/slices/widgets/tsconfig.json
+++ b/slices/widgets/tsconfig.json
@@ -1,12 +1,13 @@
 {
 	"extends": "../../tsconfig.base.json",
 	"compilerOptions": {
+		"baseUrl": "../../",
 		"paths": {
-			"@assets/*": ["../../assets/*"],
-			"@shared/*": ["../shared/*"],
-			"@entities/*": ["../entities/*"],
-			"@modules/*": ["../modules/*"],
-			"@features/*": ["../features/*"]
+			"@assets/*": ["assets/*"],
+			"@shared/*": ["slices/shared/*"],
+			"@entities/*": ["slices/entities/*"],
+			"@modules/*": ["slices/modules/*"],
+			"@features/*": ["slices/features/*"]
 		}
 	}
 }
