--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -10,14 +10,12 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
-org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-org.gradle.parallel=true
-org.gradle.configureondemand=true
-org.gradle.daemon=true
+# org.gradle.parallel=true
 
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
@@ -57,15 +55,9 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
 
-# Enable 16KB page size support for Android
-android.enableR8.fullMode=true
-android.useAndroidX=true
-android.enableJetifier=true
-
 android.compileSdkVersion=35
 android.targetSdkVersion=35
 android.buildToolsVersion=35.0.0
-android.ndkVersion=27.0.12077973
 android.enableProguardInReleaseBuilds=false
 android.enableShrinkResourcesInReleaseBuilds=false
 # Whether the app is configured to use edge-to-edge via the app config or `react-native-edge-to-edge` plugin
