--- a/modules/chaos-odds/package.json
+++ b/modules/chaos-odds/package.json
@@ -30,16 +30,16 @@
 	"author": "",
 	"license": "MIT",
 	"peerDependencies": {
-		"expo": "*",
-		"react": "*",
-		"react-native": "*"
+		"expo": ">=50.0.0",
+		"react": ">=18.0.0",
+		"react-native": ">=0.79.0"
 	},
 	"devDependencies": {
-		"@types/react": "*",
+		"@types/react": "~19.0.0",
 		"@types/react-native": "*",
-		"@types/jest": "^29.5.0",
+		"@types/jest": "^29.5.12",
 		"jest": "^29.5.0",
-		"react-native": "*",
+		"react-native": "0.79.5",
 		"ts-jest": "^29.1.0"
 	}
 }
