--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,12 +87,12 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.arkhaminvestigator.dev'
+    namespace 'com.arkhaminvestigator'
     defaultConfig {
-        applicationId 'com.arkhaminvestigator.dev'
+        applicationId 'com.arkhaminvestigator'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 504
+        versionCode 506
         versionName "2.12.0"
     }
     signingConfigs {
