--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,13 +87,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.arkhaminvestigator'
+    namespace 'com.arkhaminvestigator.dev'
     defaultConfig {
-        applicationId 'com.arkhaminvestigator'
+        applicationId 'com.arkhaminvestigator.dev'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 508
-        versionName "2.12.2"
+        versionCode 510
+        versionName "2.13.0"
     }
     signingConfigs {
         debug {
