--- a/modules/chaos-odds/package.json
+++ b/modules/chaos-odds/package.json
@@ -12,8 +12,8 @@
 		"build:android": "cd cli && ./_build.android.sh",
 		"build:android:dev": "cd cli && ./_build.android.dev.sh",
 		"clean": "cd rust && cargo clean",
-		"test": "cd rust && cargo test",
-		"test:release": "cd rust && cargo test --release",
+		"test": "cd rust && cargo test --release",
+		"test:dev": "cd rust && cargo test",
 		"test:js": "jest",
 		"test:js:watch": "jest --watch",
 		"test:js:coverage": "jest --coverage",
