--- a/modules/chaos-odds/package.json
+++ b/modules/chaos-odds/package.json
@@ -8,9 +8,9 @@
 		"build": "./build.sh",
 		"build:dev": "./build.sh --dev",
 		"build:ios": "cd cli && ./_build.ios.sh",
-		"build:ios:dev": "cd cli && ./_build.ios.dev.sh",
-		"build:android": "cd cli && ./_build.android.sh",
-		"build:android:dev": "cd cli && ./_build.android.dev.sh",
+		"build:ios:dev": "cd cli/build && ./ios.dev.sh",
+		"build:android": "cd cli/build && bash android.sh",
+		"build:android:dev": "cd cli/build && bash android.dev.sh",
 		"clean": "cd rust && cargo clean",
 		"test": "cd rust && cargo test --release",
 		"test:dev": "cd rust && cargo test",
