--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,13 +87,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.arkhaminvestigator.dev'
+    namespace 'com.arkhaminvestigator'
     defaultConfig {
-        applicationId 'com.arkhaminvestigator.dev'
+        applicationId 'com.arkhaminvestigator'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 510
-        versionName "2.13.0"
+        versionCode 512
+        versionName "2.13.1"
     }
     signingConfigs {
         debug {
