--- a/package.json
+++ b/package.json
@@ -132,7 +132,8 @@
 		"rn-statusbar-height": "^2.1.1",
 		"semver": "^7.7.1",
 		"styled-components": "^6.1.15",
-		"uuid": "^11.0.5"
+		"uuid": "^11.0.5",
+		"ws": "^8.18.3"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.25.2",
@@ -162,7 +163,9 @@
 	},
 	"private": true,
 	"commitlint": {
-		"extends": ["@commitlint/config-conventional"]
+		"extends": [
+			"@commitlint/config-conventional"
+		]
 	},
 	"expo": {
 		"doctor": {
