--- a/package.json
+++ b/package.json
@@ -113,12 +113,13 @@
 		"react-native-haptic-feedback": "^2.3.3",
 		"react-native-localize": "^3.4.1",
 		"react-native-navigation-mode": "^1.2.3",
+		"react-native-qrcode-svg": "^6.3.21",
 		"react-native-reanimated": "~3.17.4",
 		"react-native-restart": "^0.0.27",
 		"react-native-safe-area-context": "5.4.0",
 		"react-native-screens": "~4.11.1",
 		"react-native-storage": "^1.0.1",
-		"react-native-svg": "15.11.2",
+		"react-native-svg": "^15.11.2",
 		"react-native-toast-message": "^2.3.3",
 		"react-native-web": "^0.20.0",
 		"react-native-webview": "13.13.5",
