feat: base host view

--- a/.env
+++ b/.env
@@ -5,7 +5,9 @@ EXPO_PUBLIC_API_URL="https://neizerth.github.io/ArkhamDividerData"
 # EXPO_PUBLIC_API_URL="https://divider.ahlcg.online"
 
 EXPO_PUBLIC_GOOGLE_PLAY_URL="https://play.google.com/store/apps/details?id=com.arkhaminvestigator"
-EXPO_PUBLIC_APP_STORE_URL=""
+EXPO_PUBLIC_APP_STORE_URL="https://apps.apple.com/us/app/ah-investigator/id6753330970"
 
 EXPO_PUBLIC_ASSET_URL="https://neizerth.github.io/ArkhamInvestigatorData"
 # EXPO_PUBLIC_ASSET_URL="https://investigator.ahlcg.online"
+
+EXPO_PUBLIC_CRYPTO_KEY="0£hY5t%KjwA4"
