--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,9 @@ EXPO_PUBLIC_INVESTIGATORS_API_URL="https://neizerth.github.io/ArkhamInvestigator
 # EXPO_PUBLIC_INVESTIGATORS_API_URL="http://localhost:8080"
 EXPO_PUBLIC_API_URL="https://neizerth.github.io/ArkhamDividerData"
 
+EXPO_PUBLIC_GOOGLE_PLAY_URL="https://play.google.com/store/apps/details?id=com.arkhaminvestigator"
+EXPO_PUBLIC_APP_STORE_URL="https://apps.apple.com/us/app/ah-investigator/id6753330970"
+
 # EXPO_PUBLIC_API_URL="http://localhost:8080"
+
+EXPO_PUBLIC_CRYPTO_KEY="a40xyX1F#s37"
