refactor: cache clean

--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
 		"eas:apk": "npm run eas:android -- --profile apk",
 		"build:modules": "./modules/build.sh",
 		"build": "npm run build:android && npm run build:ios",
-		"build:apk": "npm run eas:apk -- --local",
-		"build:android": "npm run eas:android -- --local",
+		"build:apk": "npm run eas:apk -- --local --clear-cache",
+		"build:android": "npm run eas:android -- --local --clear-cache",
 		"deploy:android": "npm run build:android && npm run submit:android",
-		"build:ios": "npm run prebuild:ios && eas build -p ios --local",
+		"build:ios": "npm run prebuild:ios && eas build -p ios --local --clear-cache",
 		"postbuild:ios": "tsx ./cli/rename-build.ts ipa",
 		"postbuild:android": "tsx ./cli/rename-build.ts aab",
 		"postbuild:apk": "tsx ./cli/rename-build.ts apk",
