--- a/package.json
+++ b/package.json
@@ -114,16 +114,20 @@
 		"react-native-gradients": "^2.1.1",
 		"react-native-haptic-feedback": "^2.3.3",
 		"react-native-localize": "^3.4.1",
+		"react-native-mask-input": "^1.2.3",
 		"react-native-navigation-mode": "^1.2.3",
+		"react-native-qrcode-svg": "^6.3.21",
 		"react-native-reanimated": "~3.17.4",
 		"react-native-restart": "^0.0.27",
 		"react-native-safe-area-context": "5.4.0",
 		"react-native-screens": "~4.11.1",
 		"react-native-storage": "^1.0.1",
 		"react-native-svg": "15.11.2",
+		"react-native-tcp-socket": "^6.4.1",
 		"react-native-toast-message": "^2.3.3",
 		"react-native-web": "^0.20.0",
 		"react-native-webview": "13.13.5",
+		"react-native-zeroconf": "^0.14.0",
 		"react-native-zip-archive": "^7.0.2",
 		"react-redux": "^9.2.0",
 		"react-responsive": "^10.0.0",
@@ -133,6 +137,7 @@
 		"redux-toolkit-helpers": "^1.0.3",
 		"rn-statusbar-height": "^2.1.1",
 		"semver": "^7.7.1",
+		"stream": "^0.0.3",
 		"styled-components": "^6.1.15",
 		"uuid": "^11.0.5"
 	},
@@ -149,6 +154,7 @@
 		"@types/moment": "^2.11.29",
 		"@types/ramda": "^0.30.2",
 		"@types/react": "~19.0.0",
+		"@types/react-native-zeroconf": "^0.13.1",
 		"@types/react-test-renderer": "^19.0.0",
 		"@types/semver": "^7.7.0",
 		"@types/styled-components-react-native": "^5.2.5",
@@ -164,7 +170,9 @@
 	},
 	"private": true,
 	"commitlint": {
-		"extends": ["@commitlint/config-conventional"]
+		"extends": [
+			"@commitlint/config-conventional"
+		]
 	},
 	"expo": {
 		"doctor": {
@@ -180,5 +188,8 @@
 				"disabled": true
 			}
 		}
+	},
+	"optionalDependencies": {
+		"bufferutil": "^4.1.0"
 	}
 }
